# rpg_ig_active_reconstruction

./: .directory  CMakeLists.txt  README.md  package.xml
dense_reconstruction/: CMakeLists.txt  package.xml
dense_reconstruction/config/: bluefox_016_sis_pinhole_new.yaml
dense_reconstruction/gazebo/flying_stereo_cam/: flying_stereo_cam.gazebo.xacro
dense_reconstruction/gazebo/launch/: panel_art_world.launch
dense_reconstruction/gazebo/worlds/: art_panel.world  bunny_home.xml  reconstruction_scene_3.xml  world_dragon.xml
dense_reconstruction/include/dense_reconstruction/: robot_planning_interface.h  stereo_data_retriever.h
dense_reconstruction/include/utils/: math.h
dense_reconstruction/launch/: complete_flying_stereo_simulation.launch  complete_simulation.launch  complete_stereo_simulation.launch  octomap.launch  remode_for_simulation.launch  view_planner.launch.orig  youbot_fixed_waypoint_controller.launch
dense_reconstruction/src/utils/: ros_eigen.cpp
dense_reconstruction/srv/: PoseSetter.srv  SaveViewSpace.srv  ViewRequest.srv
example/flying_gazebo_stereo_cam/: CMakeLists.txt  package.xml
example/flying_gazebo_stereo_cam/config/: bunny.rviz  dome_288_views.txt  dome_48_views.txt  dome_864_views.txt
example/flying_gazebo_stereo_cam/gazebo/: flying_stereo_cam.gazebo  flying_stereo_cam.xacro  materials.xacro
example/flying_gazebo_stereo_cam/launch/: flying_gazebo_stereo_cam.launch  robot_interface.launch  simple_viewspace_module.launch  stereo_processing.launch
example/flying_gazebo_stereo_cam/model/: flying_stereo_cam.xacro  macros.xacro  world.sdf
ig_active_reconstruction/: CMakeLists.txt  package.xml
ig_active_reconstruction/include/ig_active_reconstruction/: basic_view_planner.hpp  factory.hpp  goal_evaluation_module.hpp  max_calls_termination_criteria.hpp  octomap_basic_ray_ig_calculator.hpp  octomap_ig_calculator.hpp  octomap_ig_tree.hpp  octomap_ig_tree_node.hpp  octomap_ig_tree_world_representation.hpp  octomap_information_gain.hpp  octomap_map_metric.hpp  octomap_occlusion_calculator.hpp  octomap_pcl_input.hpp  octomap_ray_occlusion_calculator.hpp  octomap_std_pcl_input.hpp  octomap_tree_metric.hpp  octomap_world_representation.hpp  robot_communication_interface.hpp  robot_movement_cost.hpp  utility_calculator.hpp  view.hpp  view_space.hpp  views_communication_interface.hpp  views_simple_view_space_module.hpp  weighted_linear_utility.hpp  world_representation_communication_interface.hpp  world_representation_pinhole_cam_raycaster.hpp  world_representation_raycaster.hpp
ig_active_reconstruction/src/code_base/: basic_view_planner.cpp  factory.inl  max_calls_termination_criteria.cpp  octomap_basic_ray_ig_calculator.inl  octomap_ig_calculator.inl  octomap_ig_tree.cpp  octomap_ig_tree_node.cpp  octomap_information_gain.inl  octomap_map_metric.inl  octomap_pcl_input.inl  octomap_world_representation.inl  view.cpp  view_space.cpp  views_simple_view_space_module.cpp  weighted_linear_utility.cpp  word_representation_pinhole_cam_raycaster.cpp  world_representation_communication_interface.cpp  world_representation_pinhole_cam_raycaster.cpp
ig_active_reconstruction_msgs/: CMakeLists.txt  package.xml
ig_active_reconstruction_msgs/msg/: InformationGain.msg  InformationGainRetrievalCommand.msg  InformationGainRetrievalConfig.msg  SubWindow.msg  ViewMsg.msg  ViewSpaceMsg.msg
ig_active_reconstruction_msgs/srv/: DeleteViews.srv  FeasibleViewSpaceRequest.srv  InformationGainCalculation.srv  MapMetricCalculation.srv  MoveToOrder.srv  MovementCostCalculation.srv  PclInput.srv  StringList.srv  ViewInformationReturn.srv  ViewRequest.srv  ViewSpaceRequest.srv  ViewSpaceUpdate.srv
ig_active_reconstruction_octomap/: CMakeLists.txt  package.xml
ig_active_reconstruction_octomap/include/ig_active_reconstruction_octomap/: factory.hpp  octomap_basic_ray_ig_calculator.hpp  octomap_ig_calculator.hpp  octomap_ig_tree.hpp  octomap_ig_tree_node.hpp  octomap_ig_tree_world_representation.hpp  octomap_information_gain.hpp  octomap_map_metric.hpp  octomap_occlusion_calculator.hpp  octomap_pcl_input.hpp  octomap_ray_occlusion_calculator.hpp  octomap_ros_interface.hpp  octomap_ros_pcl_input.hpp  octomap_std_pcl_input.hpp  octomap_std_pcl_input_point_xyz.hpp  octomap_world_representation.hpp
ig_active_reconstruction_octomap/launch/: octomap_world_representation.launch
ig_active_reconstruction_octomap/src/code_base/: factory.inl  octomap_basic_ray_ig_calculator.inl  octomap_ig_calculator.inl  octomap_ig_tree.cpp  octomap_ig_tree_node.cpp  octomap_information_gain.inl  octomap_map_metric.inl  octomap_pcl_input.inl  octomap_ray_occlusion_calculator.inl  octomap_ros_interface.inl  octomap_ros_pcl_input.inl  octomap_std_pcl_input.inl  octomap_world_representation.inl
ig_active_reconstruction_octomap/src/ros_nodes/: octomap_world_representation.cpp
ig_active_reconstruction_ros/: CMakeLists.txt  package.xml
ig_active_reconstruction_ros/include/ig_active_reconstruction_ros/: conversions.hpp  param_loader.hpp  robot_conversions.hpp  robot_movement_cost_conversions.hpp  robot_ros_client_ci.hpp  robot_ros_server_ci.hpp  view_conversions.hpp  view_space_conversions.hpp  views_conversions.hpp  views_ros_client_ci.hpp  views_ros_server_ci.hpp  world_conversions.hpp  world_representation_ros_client_ci.hpp  (+2 more)
ig_active_reconstruction_ros/launch/: basic_view_planner.launch
ig_based_active_reconstruction/: CMakeLists.txt  package.xml
ig_based_active_reconstruction_msgs/: CMakeLists.txt  package.xml
ig_based_active_reconstruction_msgs/msg/: ViewInformation.msg  ViewInformationRequest.msg  ViewSpaceMsg.msg
ig_based_active_reconstruction_msgs/srv/: FeasibleViewSpaceRequest.srv  IsOk.srv  MoveToOrder.srv  MovementCostCalculation.srv  ViewInformationReturn.srv  ViewRequest.srv
lib/movements/: CMakeLists.txt  package.xml
movements/: CMakeLists.txt  package.xml
movements/src/: circular_ground_path.cpp  combined_kinematic_movement_description.cpp  combined_relative_movement.cpp  in_out_spiral.cpp  kinematic_movement_description.cpp  linear_movement.cpp  relative_movement.cpp
(+985 files in other folders)
