<?xml version="1.0"?>
<package>
  <name>dense_reconstruction</name>
  <version>0.2.0</version>
  <description>Package providing means for dense_reconstruction</description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>


  <license>LGPLv3</license>

  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_generation</build_depend>std_msgs
  <build_depend>std_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>octomap_server</build_depend>
  <build_depend>octomap_msgs</build_depend>
  
  <run_depend>rosbag</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>octomap_server</run_depend>
  <run_depend>octomap_msgs</run_depend>


</package>