<?xml version="1.0"?>
<package>
  <name>ig_active_reconstruction</name>
  <version>0.9.0</version>
  <description>Package defining common interfaces and providing common tools for active 3D reconstruction as defined in the paper
    
   "An Information Gain Formulation for Active Volumetric 3D Reconstruction"
   by S. Isler, R. Sabzevari, J. Delmerico and Davide Scaramuzza
   [IEEE International Conference on Robotics and Automation (ICRA), Stockholm, 2016]
   
   </description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>movements</build_depend>
  
  <run_depend>movements</run_depend>


</package>