<?xml version="1.0"?>
<package>
  <name>ig_active_reconstruction_octomap</name>
  <version>0.0.0</version>
  <description>Package providing an octomap based world representation implementation for ig_active_reconstruction
    
   "An Information Gain Formulation for Active Volumetric 3D Reconstruction"
   by S. Isler, R. Sabzevari, J. Delmerico and Davide Scaramuzza
   [IEEE International Conference on Robotics and Automation (ICRA), Stockholm, 2016]
   
   </description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>movements</build_depend>
  <build_depend>ig_active_reconstruction</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ig_active_reconstruction_ros</build_depend>
  
  <run_depend>movements</run_depend>
  <run_depend>ig_active_reconstruction</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ig_active_reconstruction_ros</run_depend>


</package>