<?xml version="1.0"?>
<package>
  <name>ig_active_reconstruction_ros</name>
  <version>0.9.0</version>
  <description>ROS nodes and classes for active 3D reconstruction. It uses the interfaces as defined in the paper
    
   "An Information Gain Formulation for Active Volumetric 3D Reconstruction"
   by S. Isler, R. Sabzevari, J. Delmerico and Davide Scaramuzza
   [IEEE International Conference on Robotics and Automation (ICRA), Stockholm, 2016]
   
   </description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ig_active_reconstruction_msgs</build_depend>
  <build_depend>ig_active_reconstruction</build_depend>
  <build_depend>movements</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>ig_active_reconstruction_msgs</run_depend>
  <run_depend>ig_active_reconstruction</run_depend>
  <run_depend>movements</run_depend>


</package>