<?xml version="1.0"?>
<package>
  <name>movements</name>
  <version>0.1.0</version>
  <description>Library for representing relative movements in space</description>
  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>
  <license>LGPLv3</license>
  <author email="islerstefan@bluewin.ch">Stefan Isler</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>angles</build_depend>
  <run_depend>angles</run_depend>
</package>